# recipe-books

./: .gitignore  Cargo.toml
src/: error.rs  lib.rs  main.rs
src/api/: api.rs
src/domain/entity/: book.rs  customer.rs  mod.rs  recipe.rs
src/domain/entity/common/: category.rs  entity.rs  ingredient.rs  mod.rs  topic.rs
src/features/: mod.rs
src/features/Book/: mod.rs  repositoy.rs  routes.rs
src/features/Customer/: Repository.rs  Routes.rs  mod.rs  repository.rs  routes.rs
src/features/Ingredient/: repositoy.rs  routes.rs
src/features/Recipe/: mod.rs  repositoy.rs  routes.rs
src/features/Topic/: get_by_name.rs  mod.rs  repository.rs  routes.rs
src/persistence/: db.rs  mod.rs  specification.rs
src/persistence/auth/: common.rs  google.rs  google_auth.rs  jwt.rs  mod.rs
src/persistence/migrations/: app.sql
