[package]
name = "recipe-books"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
chrono = { version = "0.4.38", features = ["serde"] }
reqwest = { version = "0.12.4", features = ["json"] }
rocket = {version = "0.5.0", features = ["uuid","json"]}
runtime-tokio = "0.0.0"
serde = "1.0.202"
serde_json = "1.0.117"
sqlx = {version = "0.7.4",features = [ "postgres","chrono","runtime-tokio","rust_decimal","uuid"]}
sqlx-postgres = "0.7.4"
tokio = "1.37.0"
[dependencies.uuid]
version = "1.8.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde"
]



